--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@trendmicro/react-sidenav": "^0.5.0",
     "axios": "^1.6.3",
+    "bootstrap-icons": "^1.11.3",
     "cdbreact": "^1.5.18",
     "formik": "^2.4.5",
     "react": "^18.2.0",
