--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "bootstrap-icons": "^1.11.3",
     "cdbreact": "^1.5.18",
     "formik": "^2.4.5",
+    "html2pdf.js": "^0.10.1",
+    "pdf-lib": "^1.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
